--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -28,3 +28,10 @@
     background-color: rgb(233, 233, 233);
 
 }
+
+.Card-pet{
+    background-color: azure;
+    margin: 10%;
+    margin-right: 60%;
+    height: 10%;
+}
